// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviousNext Business Guide When in a middle article it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Pick your business location
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-left chevronPrevious"
        />
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Choose your business name
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-right chevronNext"
        />
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <a
        className="previousnext-next-url"
        href="/business-guide/launch/choose-your-business-name-register"
      >
        <button
          className="SmallSecondaryButton  "
          disabled={undefined}
          formTarget="_self"
          id={undefined}
          onKeyPress={[Function]}
          onTouchTap={[Function]}
          tabIndex="0"
        >
          Choose your business name
        </button>
      </a>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right chevronNext"
      />
    </div>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the first article of a middle section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Buy an existing business or franchise
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-left chevronPrevious"
        />
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Choose a business structure
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-right chevronNext"
        />
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <a
        className="previousnext-next-url"
        href="/business-guide/launch/choose-business-structure-types-chart"
      >
        <button
          className="SmallSecondaryButton  "
          disabled={undefined}
          formTarget="_self"
          id={undefined}
          onKeyPress={[Function]}
          onTouchTap={[Function]}
          tabIndex="0"
        >
          Choose a business structure
        </button>
      </a>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right chevronNext"
      />
    </div>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the first article of the first section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="titleHide"
      >
        <h6
          className="previousTitle"
        >
          No Previous Article
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainerHide"
      >
        <button
          className="SmallSecondaryButton  "
          disabled={undefined}
          formTarget="_self"
          id={undefined}
          onKeyPress={[Function]}
          onTouchTap={[Function]}
          tabIndex="0"
        >
          No previous article
        </button>
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Write your business plan
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-right chevronNext"
        />
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <a
        className="previousnext-next-url"
        href="/business-guide/plan/write-your-business-plan-template"
      >
        <button
          className="SmallSecondaryButton  "
          disabled={undefined}
          formTarget="_self"
          id={undefined}
          onKeyPress={[Function]}
          onTouchTap={[Function]}
          tabIndex="0"
        >
          Write your business plan
        </button>
      </a>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right chevronNext"
      />
    </div>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the last article of a middle section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Open a business bank account
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-left chevronPrevious"
        />
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Manage your finances
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-right chevronNext"
        />
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <a
        className="previousnext-next-url"
        href="/business-guide/manage/manage-your-finances-business-credit"
      >
        <button
          className="SmallSecondaryButton  "
          disabled={undefined}
          formTarget="_self"
          id={undefined}
          onKeyPress={[Function]}
          onTouchTap={[Function]}
          tabIndex="0"
        >
          Manage your finances
        </button>
      </a>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right chevronNext"
      />
    </div>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the last article of the last section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div />
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Native American-owned businesses
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-left chevronPrevious"
        />
      </div>
      <div />
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`PreviousNext For Partners When in a middle article it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Operate as a 7(a) Lender
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-left chevronPrevious"
        />
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Training and Courses
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-right chevronNext"
        />
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <a
        className="previousnext-next-url"
        href="/for-partners/lenders/7a-loans/training-and-courses"
      >
        <button
          className="SmallSecondaryButton  "
          disabled={undefined}
          formTarget="_self"
          id={undefined}
          onKeyPress={[Function]}
          onTouchTap={[Function]}
          tabIndex="0"
        >
          Training and Courses
        </button>
      </a>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right chevronNext"
      />
    </div>
  </div>
</div>
`;

exports[`PreviousNext For Partners When in the first article of a section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="titleHide"
      >
        <h6
          className="previousTitle"
        >
          No Previous Article
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainerHide"
      >
        <button
          className="SmallSecondaryButton  "
          disabled={undefined}
          formTarget="_self"
          id={undefined}
          onKeyPress={[Function]}
          onTouchTap={[Function]}
          tabIndex="0"
        >
          No previous article
        </button>
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Operate as a 7(a) Lender
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-right chevronNext"
        />
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <a
        className="previousnext-next-url"
        href="/for-partners/lenders/7a-loans/operate-as-a-7a-lender"
      >
        <button
          className="SmallSecondaryButton  "
          disabled={undefined}
          formTarget="_self"
          id={undefined}
          onKeyPress={[Function]}
          onTouchTap={[Function]}
          tabIndex="0"
        >
          Operate as a 7(a) Lender
        </button>
      </a>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right chevronNext"
      />
    </div>
  </div>
</div>
`;

exports[`PreviousNext For Partners When in the last article of a section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div />
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <button
            className="SmallSecondaryButton  "
            disabled={undefined}
            formTarget="_self"
            id={undefined}
            onKeyPress={[Function]}
            onTouchTap={[Function]}
            tabIndex="0"
          >
            Training and Courses
          </button>
        </div>
        <i
          aria-hidden="true"
          className="fa fa-chevron-left chevronPrevious"
        />
      </div>
      <div />
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`PreviousNext Won't render without a lineage 1`] = `"received is not a function"`;
